@@ -8,15 +8,20 @@
 
 package org.sosy_lab.cpachecker.cfa;
 
+import static com.google.common.base.Preconditions.checkNotNull;
+
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
+import com.google.common.base.Predicates;
 import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
+import com.google.common.util.concurrent.Uninterruptibles;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.PrintStream;
@@ -33,6 +38,8 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
+import org.checkerframework.checker.nullness.qual.NonNull;
+import org.checkerframework.checker.nullness.qual.Nullable;
 import org.sosy_lab.common.Concurrency;
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.configuration.Configuration;
@@ -49,7 +56,6 @@ import org.sosy_lab.cpachecker.cfa.ast.AFunctionCall;
 import org.sosy_lab.cpachecker.cfa.ast.AIdExpression;
 import org.sosy_lab.cpachecker.cfa.ast.AStatement;
 import org.sosy_lab.cpachecker.cfa.ast.AVariableDeclaration;
-import org.sosy_lab.cpachecker.cfa.ast.AVariableDeclarationExchange;
 import org.sosy_lab.cpachecker.cfa.ast.AbstractSimpleDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
 import org.sosy_lab.cpachecker.cfa.ast.acslDeprecated.ACSLParser;
@@ -83,6 +89,7 @@ import org.sosy_lab.cpachecker.cfa.postprocessing.function.ThreadCreateTransform
 import org.sosy_lab.cpachecker.cfa.postprocessing.global.CFACloner;
 import org.sosy_lab.cpachecker.cfa.postprocessing.global.FunctionCallUnwinder;
 import org.sosy_lab.cpachecker.cfa.types.MachineModel;
+import org.sosy_lab.cpachecker.cfa.types.c.CBasicType;
 import org.sosy_lab.cpachecker.cfa.types.c.CComplexType.ComplexTypeKind;
 import org.sosy_lab.cpachecker.cfa.types.c.CDefaults;
 import org.sosy_lab.cpachecker.cfa.types.c.CElaboratedType;
@@ -130,7 +137,9 @@ public class CFACreator {
       secure = true,
       name = "parser.useClang",
       description =
-          "For C files, convert to LLVM IR with clang first and then use the LLVM parser.")
+          "For C files, convert to LLVM IR with clang first and then use the LLVM parser (currently"
+              + " unsupported).")
+  @Deprecated
   private boolean useClang = false;
 
   @Option(
@@ -232,7 +241,9 @@ public class CFACreator {
       description =
           "the path to export a json mapping which for each"
               + " location contains the variables"
-              + " in scope and their type")
+              + " in scope and their type. Please be aware that this "
+              + "is **not** a stable interface and the output format of "
+              + "the file may change in future versions.")
   @FileOption(FileOption.Type.OUTPUT_FILE)
   private Path pathForExportingVariablesInScopeWithTheirType = null;
 
@@ -298,27 +309,21 @@ public class CFACreator {
 
   @Option(
       secure = true,
-      name = "cfa.exportCfaAsync",
-      description =
-          "export the information of the CFA asyncronously or synchronously."
-              + "A new thread will be created to export the CFA if `true` is given.")
-  private boolean exportCfaAsyncOption = true;
-
-  @Option(
-      secure = true,
       name = "cfa.findLiveVariables",
       description =
           "By enabling this option the variables that are live are"
-              + " computed for each edge of the cfa. Live means that their value"
+              + " computed for each edge of the CFA. Live means that their value"
               + " is read later on.")
   private boolean findLiveVariables = false;
 
   @Option(
       secure = true,
       description =
-          "Programming language of the input program. If not given explicitly, "
-              + "auto-detection will occur")
-  // keep option name in sync with {@link CPAMain#language}, value might differ
+          "Programming language of the input program. If not given explicitly, auto-detection"
+              + " will occur. LLVM IR is currently unsupported as input (cf."
+              + " https://gitlab.com/sosy-lab/software/cpachecker/-/issues/1356).")
+  // keep option name in sync with {@link CPAMain#language} and {@link
+  // ConfigurationFileChecks.OptionsWithSpecialHandlingInTest#language}, value might differ
   private Language language = Language.C;
 
   private Language inputLanguage = Language.C;
@@ -352,6 +357,8 @@ public class CFACreator {
     private final List<Statistics> statisticsCollection;
     private final LogManager logger;
 
+    private @Nullable Thread exportThread;
+
     private CFACreatorStatistics(LogManager pLogger) {
       logger = pLogger;
       statisticsCollection = new ArrayList<>();
@@ -373,6 +380,11 @@ public class CFACreator {
       out.println("    Time for loop structure:  " + loopStructureTime);
       out.println("    Time for AST structure:   " + astStructureTime);
 
+      if (exportThread != null) {
+        // If export is still running we should wait such that statistics are correct
+        // and we don't kill the export once CPAchecker terminates.
+        Uninterruptibles.joinUninterruptibly(exportThread);
+      }
       if (exportTime.getNumberOfIntervals() > 0) {
         out.println("    Time for CFA export:      " + exportTime);
       }
@@ -439,8 +451,7 @@ public class CFACreator {
             logger.log(
                 Level.WARNING, "Option --preprocess is ignored when used with option -clang");
           }
-          ClangPreprocessor clang = new ClangPreprocessor(config, logger);
-          parser = LlvmParserWithClang.Factory.getParser(clang, logger, machineModel);
+          parser = Parsers.getLlvmClangParser(config, logger, machineModel);
         } else {
           parser = outerParser;
         }
@@ -448,7 +459,7 @@ public class CFACreator {
       case LLVM -> {
         parser = Parsers.getLlvmParser(logger, machineModel);
         language = Language.C;
-        // After parsing we will have a CFA representing C code
+        // After parsing, we will have a CFA representing C code
       }
       default -> throw new AssertionError();
     }
@@ -646,7 +657,7 @@ public class CFACreator {
     // (currently no such post-processings exist)
 
     // SIXTH, get information about the CFA,
-    // the cfa should not be modified after this line.
+    // the CFA should not be modified after this line.
 
     // Get information about variables, needed for some analysis.
     if (language == Language.C) {
@@ -691,11 +702,7 @@ public class CFACreator {
         || (exportCfaPixelFile != null)
         || (exportCfaToCFile != null && exportCfaToC)
         || (pathForExportingVariablesInScopeWithTheirType != null)) {
-      if (exportCfaAsyncOption) {
-        exportCFAAsync(immutableCFA);
-      } else {
-        exportCFA(immutableCFA);
-      }
+      exportCFAAsync(immutableCFA);
     }
 
     logger.log(
@@ -828,14 +835,13 @@ public class CFACreator {
     // for all possible edges
     for (CFAEdge edge : CFAUtils.allEdges(pCfa)) {
       // check for creation of new thread
-      if (edge instanceof AStatementEdge) {
-        final AStatement statement = ((AStatementEdge) edge).getStatement();
-        if (statement instanceof AFunctionCall) {
+      if (edge instanceof AStatementEdge aStatementEdge) {
+        final AStatement statement = aStatementEdge.getStatement();
+        if (statement instanceof AFunctionCall aFunctionCall) {
           final AExpression functionNameExp =
-              ((AFunctionCall) statement).getFunctionCallExpression().getFunctionNameExpression();
-          if (functionNameExp instanceof AIdExpression) {
-            if (ThreadingTransferRelation.THREAD_START.equals(
-                ((AIdExpression) functionNameExp).getName())) {
+              aFunctionCall.getFunctionCallExpression().getFunctionNameExpression();
+          if (functionNameExp instanceof AIdExpression aIdExpression) {
+            if (ThreadingTransferRelation.THREAD_START.equals(aIdExpression.getName())) {
               return true;
             }
           }
@@ -981,7 +987,7 @@ public class CFACreator {
 
     } else if (sourceFiles.size() == 1) {
       // get the AAA part out of a filename like test/program/AAA.cil.c
-      Path path = Path.of(sourceFiles.get(0)).getFileName();
+      Path path = Path.of(sourceFiles.getFirst()).getFileName();
       if (path != null) {
         String filename = path.toString(); // remove directory
 
@@ -1022,7 +1028,7 @@ public class CFACreator {
     }
 
     if (cfa.getLanguage() == Language.C) {
-      addDefaultInitializers(globalVars);
+      addDefaultInitializers(cfa.getMachineModel(), globalVars);
     } else {
       // TODO addDefaultInitializerForJava
     }
@@ -1084,7 +1090,8 @@ public class CFACreator {
    *
    * @param globalVars a list with all global declarations
    */
-  private static void addDefaultInitializers(List<Pair<ADeclaration, String>> globalVars) {
+  private static void addDefaultInitializers(
+      MachineModel pMachineModel, List<Pair<ADeclaration, String>> globalVars) {
     // first, collect all variables which do have an explicit initializer
     Set<String> initializedVariables = new HashSet<>();
     for (Pair<ADeclaration, String> p : globalVars) {
@@ -1127,9 +1134,9 @@ public class CFACreator {
           // (e.g., "struct s;"), we cannot produce an initializer.
           // (Although there shouldn't be any variables of this type anyway.)
           CType type = v.getType().getCanonicalType();
-          if (!(type instanceof CElaboratedType)
-              || (((CElaboratedType) type).getKind() == ComplexTypeKind.ENUM)) {
-            CInitializer initializer = CDefaults.forType(type, v.getFileLocation());
+          if (!(type instanceof CElaboratedType cElaboratedType)
+              || (cElaboratedType.getKind() == ComplexTypeKind.ENUM)) {
+            CInitializer initializer = CDefaults.forType(pMachineModel, type, v.getFileLocation());
             v.addInitializer(initializer);
             v =
                 new CVariableDeclaration(
@@ -1153,7 +1160,95 @@ public class CFACreator {
   private void exportCFAAsync(final CFA cfa) {
     // Execute asynchronously, this may take several seconds for large programs on slow disks.
     // This is safe because we don't modify the CFA from this point on.
-    Concurrency.newThread("CFA export thread", () -> exportCFA(cfa)).start();
+    stats.exportThread = Concurrency.newThread("CFA export thread", () -> exportCFA(cfa));
+    stats.exportThread.start();
+  }
+
+  /**
+   * A helper class to have some information about the type of a variable at a certain point in the
+   * scope
+   */
+  private record AVariableDeclarationExchange(
+      @JsonProperty("name") @NonNull String name,
+      @JsonProperty("simpleType") @NonNull CBasicType simpleType) {
+
+    AVariableDeclarationExchange {
+      checkNotNull(name);
+      checkNotNull(simpleType);
+    }
+  }
+
+  /**
+   * Export a json file containing information about what the types of variables are at a certain
+   * location in the program.
+   *
+   * @param pCFA the CFA to export the information from
+   */
+  private void exportTypeInformationForEachVariable(CFA pCFA) {
+    // This is a map from a filename, line and column to a set of variable names with their types
+    // at that location.
+    // To be able to export this to json we need to separate this mapping from a triple to a set
+    // into multiple maps each one with a single key.
+    Map<String, Map<Integer, Map<Integer, Set<AVariableDeclarationExchange>>>>
+        locationToVariablesInScope = new HashMap<>();
+
+    for (CFANode node : pCFA.nodes()) {
+      Optional<FileLocation> statementContainingNode =
+          pCFA.getAstCfaRelation().getStatementFileLocationForNode(node);
+      if (statementContainingNode.isEmpty()) {
+        continue;
+      }
+
+      Optional<FluentIterable<AbstractSimpleDeclaration>> declarationAtNode =
+          pCFA.getAstCfaRelation().getVariablesAndParametersInScope(node);
+
+      if (declarationAtNode.isEmpty()) {
+        continue;
+      }
+
+      Set<AVariableDeclarationExchange> variables =
+          declarationAtNode
+              .orElseThrow()
+              .filter(Predicates.notNull())
+              .transform(
+                  declaration ->
+                      declaration.getType() instanceof CSimpleType pCSimpleType
+                          ? new AVariableDeclarationExchange(
+                              declaration.getOrigName(), pCSimpleType.getType())
+                          : null)
+              .toSet();
+
+      // create a new map if it does not exist
+      FileLocation statementFileLocation = statementContainingNode.orElseThrow();
+      String filename = statementFileLocation.getFileName().toString();
+      Integer lineNumber = statementFileLocation.getStartingLineNumber();
+      Integer columnNumber = statementFileLocation.getStartColumnInLine();
+      locationToVariablesInScope.putIfAbsent(filename, new HashMap<>());
+      locationToVariablesInScope.get(filename).putIfAbsent(lineNumber, new HashMap<>());
+      locationToVariablesInScope
+          .get(filename)
+          .get(lineNumber)
+          .putIfAbsent(columnNumber, new HashSet<>());
+      locationToVariablesInScope.get(filename).get(lineNumber).get(columnNumber).addAll(variables);
+    }
+
+    ObjectMapper mapper = new ObjectMapper(JsonFactory.builder().build());
+    mapper.setSerializationInclusion(Include.NON_NULL);
+
+    try (Writer writer =
+        IO.openOutputFile(
+            pathForExportingVariablesInScopeWithTheirType, Charset.defaultCharset())) {
+      mapper.writeValue(writer, locationToVariablesInScope);
+    } catch (JsonProcessingException e) {
+      throw new RuntimeException("Could not serialize the variables in scope to json.", e);
+    } catch (IOException e) {
+      logger.logfUserException(
+          Level.WARNING,
+          e,
+          "exporting information about what variables are in scope at each statement in the CFA"
+              + " to %s  failed due to not being able to write to the output file.",
+          pathForExportingVariablesInScopeWithTheirType);
+    }
   }
 
   private void exportCFA(final CFA cfa) {
@@ -1218,73 +1313,7 @@ public class CFACreator {
     }
 
     if (pathForExportingVariablesInScopeWithTheirType != null) {
-      // This is a map from a filename
-      Map<String, Map<Integer, Map<Integer, Set<AVariableDeclarationExchange>>>>
-          locationToVariablesInScope = new HashMap<>();
-
-      for (CFANode node : cfa.nodes()) {
-        Optional<FileLocation> statementContainingNode =
-            cfa.getAstCfaRelation().getStatementFileLocationForNode(node);
-        if (statementContainingNode.isEmpty()) {
-          continue;
-        }
-
-        Optional<FluentIterable<AbstractSimpleDeclaration>> declarationAtNode =
-            cfa.getAstCfaRelation().getVariablesAndParametersInScope(node);
-
-        if (declarationAtNode.isEmpty()) {
-          continue;
-        }
-
-        Set<AVariableDeclarationExchange> variables =
-            declarationAtNode
-                .orElseThrow()
-                .transform(
-                    declaration ->
-                        new AVariableDeclarationExchange(
-                            declaration.getOrigName(),
-                            declaration.getType() instanceof CSimpleType
-                                ? ((CSimpleType) declaration.getType()).getType()
-                                : null))
-                .toSet();
-
-        // create a new map if it does not exist
-        FileLocation statementFileLocation = statementContainingNode.orElseThrow();
-        String filename = statementFileLocation.getFileName().toString();
-        Integer lineNumber = statementFileLocation.getStartingLineNumber();
-        Integer columnNumber = statementFileLocation.getStartColumnInLine();
-        locationToVariablesInScope.putIfAbsent(filename, new HashMap<>());
-        locationToVariablesInScope.get(filename).putIfAbsent(lineNumber, new HashMap<>());
-        locationToVariablesInScope
-            .get(filename)
-            .get(lineNumber)
-            .putIfAbsent(columnNumber, new HashSet<>());
-        locationToVariablesInScope
-            .get(filename)
-            .get(lineNumber)
-            .get(columnNumber)
-            .addAll(variables);
-      }
-
-      ObjectMapper mapper = new ObjectMapper(JsonFactory.builder().build());
-      mapper.setSerializationInclusion(Include.NON_NULL);
-
-      try (Writer writer =
-          IO.openOutputFile(
-              pathForExportingVariablesInScopeWithTheirType, Charset.defaultCharset())) {
-        String entryJson = mapper.writeValueAsString(locationToVariablesInScope);
-        writer.write(entryJson);
-      } catch (JsonProcessingException e) {
-        throw new AssertionError(e);
-      } catch (IOException e) {
-        logger.logUserException(
-            Level.INFO,
-            e,
-            "exporting information about what variables are in scope at each statement in the CFA"
-                + " to "
-                + pathForExportingVariablesInScopeWithTheirType
-                + " failed due to not being able to write to the output file.");
-      }
+      exportTypeInformationForEachVariable(cfa);
     }
 
     stats.exportTime.stop();
