@@ -435,7 +435,8 @@ public class MPVAlgorithm implements Algorithm, StatisticsProvider {
                   .divide(overallPartitions - currentPartitionNumber);
       case DISTRIBUTE_BY_PROPERTY -> {
         if (partition.getNumberOfProperties() == 1) {
-          AbstractSingleProperty currentProperty = partition.getProperties().getProperties().get(0);
+          AbstractSingleProperty currentProperty =
+              partition.getProperties().getProperties().getFirst();
           if (propertyDistribution.containsKey(currentProperty)) {
             adjustedTimeLimit =
                 TimeSpan.ofMillis(
@@ -475,9 +476,13 @@ public class MPVAlgorithm implements Algorithm, StatisticsProvider {
       Configuration singleConfig = innerConfigBuilder.build();
       CoreComponentsFactory coreComponents =
           new CoreComponentsFactory(
-              singleConfig, logger, shutdownManager.getNotifier(), AggregatedReachedSets.empty());
+              singleConfig,
+              logger,
+              shutdownManager.getNotifier(),
+              AggregatedReachedSets.empty(),
+              cfa);
 
-      return coreComponents.createAlgorithm(cpa, cfa, specification);
+      return coreComponents.createAlgorithm(cpa, specification);
     } catch (InvalidConfigurationException e) {
       // Should be unreachable, since configuration is already checked
       throw new CPAException("Cannot create configuration for inner algorithm", e);
