@@ -762,13 +762,18 @@ public class PolicyIterationManager {
     }
   }
 
-  private Set<BooleanFormula> toLemmas(BooleanFormula formula) throws InterruptedException {
-    return switch (toLemmasAlgorithm) {
-      case "CNF" -> bfmgr.toConjunctionArgs(fmgr.applyTactic(formula, Tactic.TSEITIN_CNF), true);
-      case "RCNF" -> rcnfManager.toLemmas(formula, fmgr);
-      case "NONE" -> ImmutableSet.of(formula);
-      default -> throw new UnsupportedOperationException("Unexpected state");
-    };
+  private Set<BooleanFormula> toLemmas(BooleanFormula formula)
+      throws InterruptedException, CPATransferException {
+    try {
+      return switch (toLemmasAlgorithm) {
+        case "CNF" -> bfmgr.toConjunctionArgs(fmgr.applyTactic(formula, Tactic.TSEITIN_CNF), true);
+        case "RCNF" -> rcnfManager.toLemmas(formula, fmgr);
+        case "NONE" -> ImmutableSet.of(formula);
+        default -> throw new UnsupportedOperationException("Unexpected state");
+      };
+    } catch (SolverException e) {
+      throw new CPATransferException("Solver failed with exception", e);
+    }
   }
 
   private final Map<Formula, Set<String>> functionNamesCache = new HashMap<>();
@@ -844,7 +849,6 @@ public class PolicyIterationManager {
             case ABSTRACTION_REQUIRED -> {
               // Continue with abstraction.
             }
-            default -> throw new UnsupportedOperationException("Unexpected case");
           }
         }
 
@@ -908,7 +912,6 @@ public class PolicyIterationManager {
             logger.log(Level.INFO, optEnvironment.toString());
             throw new CPATransferException("Solver returned undefined status");
           }
-          default -> throw new AssertionError("Unhandled enum value in switch: " + status);
         }
       }
     } catch (SolverException e) {
@@ -969,7 +972,7 @@ public class PolicyIterationManager {
       return Pair.of(ABSTRACTION_REQUIRED, null);
     }
 
-    // Slices and bounds for all template sub-components.
+    // Slices and bounds for all template subcomponents.
     List<Set<BooleanFormula>> slices = new ArrayList<>(pTemplate.size());
     List<PolicyBound> policyBounds = new ArrayList<>();
     List<Rational> coefficients = new ArrayList<>();
@@ -1017,7 +1020,7 @@ public class PolicyIterationManager {
 
     // Abstraction required if not all predecessors, SSA forms,
     // and pointer target sets are the same.
-    PolicyBound firstBound = policyBounds.get(0);
+    PolicyBound firstBound = policyBounds.getFirst();
     for (PolicyBound bound : policyBounds) {
       if (!bound.getPredecessor().equals(firstBound.getPredecessor())
           || !bound.getFormula().getSsa().equals(firstBound.getFormula().getSsa())
@@ -1171,22 +1174,18 @@ public class PolicyIterationManager {
       return true;
     }
 
-    switch (abstractionLocations) {
-      case ALL -> {
-        return true;
-      }
+    return switch (abstractionLocations) {
+      case ALL -> true;
+
       case LOOPHEAD -> {
         LoopBoundState loopState =
             AbstractStates.extractStateByType(totalState, LoopBoundState.class);
 
-        return (cfa.getAllLoopHeads().orElseThrow().contains(node)
+        yield (cfa.getAllLoopHeads().orElseThrow().contains(node)
             && (loopState == null || loopState.isLoopCounterAbstracted()));
       }
-      case MERGE -> {
-        return node.getNumEnteringEdges() > 1;
-      }
-      default -> throw new UnsupportedOperationException("Unexpected state");
-    }
+      case MERGE -> node.getNumEnteringEdges() > 1;
+    };
   }
 
   /**
@@ -1283,8 +1282,9 @@ public class PolicyIterationManager {
   private BooleanFormula extractFormula(AbstractState pFormulaState) {
     List<BooleanFormula> constraints = new ArrayList<>();
     for (AbstractState a : asIterable(pFormulaState)) {
-      if (!(a instanceof PolicyAbstractedState) && a instanceof FormulaReportingState) {
-        constraints.add(((FormulaReportingState) a).getFormulaApproximation(fmgr));
+      if (!(a instanceof PolicyAbstractedState)
+          && a instanceof FormulaReportingState formulaReportingState) {
+        constraints.add(formulaReportingState.getFormulaApproximation(fmgr));
       }
     }
     return bfmgr.and(constraints);
